// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DrawerMenu 1`] = `
<react-mdl-Drawer
  style={
    Object {
      "border": 0,
      "boxShadow": "none",
    }
  }
>
  <span
    className="drawerTitle mdl-layout-title"
  >
    <img
      className="drawerTitleLogo"
      height="32"
      src="public/logo.png"
      width="32"
    />
    <span
      className="drawerTitleText"
    >
      Unleash
    </span>
  </span>
  <hr />
  <react-mdl-Navigation
    className="navigation"
  >
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/features"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="list"
      />
       
      Feature Toggles
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/strategies"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="extension"
      />
       
      Strategies
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/history"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="history"
      />
       
      Event History
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/archive"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="archive"
      />
       
      Archived Toggles
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/applications"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="apps"
      />
       
      Applications
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/logout"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="exit_to_app"
      />
       
      Sign out
    </a>
  </react-mdl-Navigation>
  <hr />
  <react-mdl-Navigation
    className="navigation"
  />
</react-mdl-Drawer>
`;

exports[`should render DrawerMenu with "features" selected 1`] = `
<react-mdl-Drawer
  style={
    Object {
      "border": 0,
      "boxShadow": "none",
    }
  }
>
  <span
    className="drawerTitle mdl-layout-title"
  >
    <img
      className="drawerTitleLogo"
      height="32"
      src="public/logo.png"
      width="32"
    />
    <span
      className="drawerTitleText"
    >
      Unleash
    </span>
  </span>
  <hr />
  <react-mdl-Navigation
    className="navigation"
  >
    <a
      aria-current="page"
      className="navigationLink mdl-color-text--grey-900 navigationLink mdl-color-text--black mdl-color--blue-grey-50"
      href="/features"
      onClick={[Function]}
      style={Object {}}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="list"
      />
       
      Feature Toggles
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/strategies"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="extension"
      />
       
      Strategies
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/history"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="history"
      />
       
      Event History
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/archive"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="archive"
      />
       
      Archived Toggles
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/applications"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="apps"
      />
       
      Applications
    </a>
    <a
      aria-current={null}
      className="navigationLink mdl-color-text--grey-900"
      href="/logout"
      onClick={[Function]}
    >
      <react-mdl-Icon
        className="navigationIcon"
        name="exit_to_app"
      />
       
      Sign out
    </a>
  </react-mdl-Navigation>
  <hr />
  <react-mdl-Navigation
    className="navigation"
  />
</react-mdl-Drawer>
`;
